--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.2.10",
+    "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.6",
+    "axios": "^1.6.8",
+    "bcrypt": "^5.1.1",
     "framer-motion": "^11.0.23",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.3",
     "next": "14.1.4",
     "next-themes": "^0.3.0",
