--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "framer-motion": "^11.0.23",
+    "jose": "^5.2.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.3",
     "next": "14.1.4",
@@ -22,6 +23,7 @@
     "nextjs-toploader": "^1.6.11",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "zod": "^3.22.4"
   },
