--- a/package.json
+++ b/package.json
@@ -11,12 +11,10 @@
   "dependencies": {
     "@nextui-org/react": "^2.2.10",
     "@types/bcrypt": "^5.0.2",
-    "@types/jsonwebtoken": "^9.0.6",
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "framer-motion": "^11.0.23",
     "jose": "^5.2.3",
-    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.3",
     "next": "14.1.4",
     "next-themes": "^0.3.0",
@@ -25,6 +23,8 @@
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
+    "react-moment": "^1.1.3",
+    "react-spinners": "^0.13.8",
     "zod": "^3.22.4"
   },
   "devDependencies": {
