--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jose": "^5.2.3",
     "mongoose": "^8.2.3",
     "next": "14.1.4",
+    "next-nprogress-bar": "^2.3.11",
     "next-themes": "^0.3.0",
     "nextjs-toploader": "^1.6.11",
     "react": "^18",
