--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongoose": "^8.2.3",
     "next": "14.1.4",
     "next-nprogress-bar": "^2.3.11",
+    "next-share": "^0.27.0",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
