--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/bcrypt": "^5.0.2",
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
+    "cloudinary": "^2.1.0",
     "framer-motion": "^11.0.23",
     "jose": "^5.2.3",
     "mongoose": "^8.2.3",
