--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-icons": "^5.0.1",
     "react-mentions": "^4.4.10",
     "react-moment": "^1.1.3",
+    "react-photo-view": "^1.2.4",
     "react-spinners": "^0.13.8",
     "zod": "^3.22.4"
   },
