--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@nextui-org/react": "^2.2.10",
     "@types/bcrypt": "^5.0.2",
+    "@types/nodemailer": "^6.4.14",
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.1.0",
@@ -21,6 +22,7 @@
     "next-nprogress-bar": "^2.3.11",
     "next-share": "^0.27.0",
     "next-themes": "^0.3.0",
+    "nodemailer": "^6.9.13",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
