--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-mentions": "^4.4.10",
     "react-moment": "^1.1.3",
     "react-photo-view": "^1.2.4",
